kubernetes/apmserver.yaml
# apmserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-server
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apm-server
  template:
    metadata:
      labels:
        app: apm-server
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: apm-server
          image: docker.elastic.co/apm/apm-server:7.17.18
          args: ["-e", "-E", "apm-server.host=0.0.0.0:8200", "-E", "output.elasticsearch.hosts=[\"http://elasticsearch:9200\"]"]
          ports:
            - containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 8200
      targetPort: 8200
  selector:
    app: apm-server
