kubernetes/mysql.yaml
# mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: mysqldb
          image: mysql
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysqldb
