kubernetes/skywalking-ui.yaml
# skywalking ui
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-ui
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skywalking-ui
  template:
    metadata:
      labels:
        app: skywalking-ui
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: ui
        image: apache/skywalking-ui:10.1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: skywalking-ui
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: skywalking-ui
  ports:
  - port: 8080
    nodePort: 30081
