kubernetes/spring-app-elastic.yaml
# spring-app-elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-elastic
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app-elastic
  template:
    metadata:
      labels:
        app: spring-app-elastic
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: spring-app
          image: spring-app:elastic
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app-elastic
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: spring-app-elastic
  ports:
    - port: 8080
      nodePort: 30051
